@@ -47,72 +47,121 @@ void wasp_get_now( wasp_quad* secs, wasp_quad* nsecs ){
 }
 #endif
 
-void wasp_cancel_timeout( wasp_timeout timeout ){
-    evtimer_del( &( timeout->event ) );
-    //TODO: How to unroot an atomic bomb?
-    wasp_unroot_obj( (wasp_object) timeout );
-}
+void wasp_task_cb( int fd, short evt, void* context ){
+    wasp_task task = (wasp_task) context; 
+    int ms = task->task_mt( task );
 
-void wasp_timeout_cb( int fd, short evt, void* context ){
-    wasp_timeout timeout = (wasp_timeout) context; 
-
-    if( wasp_input_monitored( timeout->input ) ){
-        wasp_wake_monitor( timeout->input, wasp_vf_symbol( wasp_ss_timeout ) );
+    if( ms ){
+        gettimeofday( &( task->time ), NULL );
+        task->time.tv_sec = ms / 1000;
+        task->time.tv_usec = ((ms % 1000)) * 1000;
+        evtimer_add( &( task->event ), &( task->time ) );
+    }else{
+        wasp_unroot_obj( (wasp_object) task );
     };
-
-    wasp_cancel_timeout( timeout );
 }
 
-wasp_timeout wasp_make_timeout( wasp_quad ms, wasp_input input ){
-    wasp_timeout timeout = WASP_OBJALLOC( timeout );
-    evtimer_set( &( timeout->event ), wasp_timeout_cb, timeout );
-    timeout->input = input;
-    return timeout;
+wasp_task wasp_make_task( wasp_task_mt mt, wasp_value context ){
+    wasp_task task = WASP_OBJALLOC( task );
+    evtimer_set( &( task->event ), wasp_task_cb, task );
+    task->task_mt = mt;
+    task->context = context;
+    return task;
 }
 
-wasp_timeout wasp_schedule_timeout( wasp_timeout timeout, wasp_quad ms ){
-    wasp_root_obj( (wasp_object) timeout );
-    gettimeofday( &( timeout->time ), NULL );
-    timeout->time.tv_sec = ms / 1000;
-    timeout->time.tv_usec = ((ms % 1000)) * 1000;
-    evtimer_add( &( timeout->event ), &( timeout->time ) );
+wasp_task wasp_schedule_task( wasp_task task, wasp_quad ms ){
+    wasp_root_obj( (wasp_object) task );
+    gettimeofday( &( task->time ), NULL );
+    task->time.tv_sec = ms / 1000;
+    task->time.tv_usec = ((ms % 1000)) * 1000;
+    evtimer_add( &( task->event ), &( task->time ) );
 }
 
-void wasp_trace_timeout( wasp_timeout timeout ){
-    wasp_grey_obj( (wasp_object) timeout->input );
+void wasp_cancel_task( wasp_task task ){
+    evtimer_del( &( task->event ) );
+    wasp_unroot_obj( (wasp_object) task );
 }
 
-WASP_GENERIC_COMPARE( timeout );
-WASP_GENERIC_FORMAT( timeout );
-WASP_GENERIC_FREE( timeout );
-WASP_C_TYPE( timeout )
+void wasp_trace_task( wasp_task task ){
+    wasp_grey_val( task->context );
+}
+
+WASP_GENERIC_COMPARE( task );
+WASP_GENERIC_FORMAT( task );
+WASP_GENERIC_FREE( task );
+WASP_C_TYPE( task )
+
+int wasp_timeout_mt( wasp_task task ){
+    wasp_input input = wasp_input_fv( task->context );
+    
+    if( wasp_input_monitored( input ) ){
+        wasp_wake_monitor( input, wasp_vf_symbol( wasp_ss_timeout ) );
+    };
+    
+    return 0;
+}
 
 WASP_BEGIN_PRIM( "timeout", timeout )
     REQ_INTEGER_ARG( ms );
     REQ_INPUT_ARG( input );
     NO_REST_ARGS( );
     
-    wasp_timeout timeout = wasp_make_timeout( ms, input );
+    wasp_task task = wasp_make_task( wasp_timeout_mt, wasp_vf_input( input ) );
+    
     if( ms < 0 ) wasp_errf( wasp_es_vm, "si", "Negative timeouts are not allowed", ms );
 
-    wasp_schedule_timeout( timeout, ms );
-    TIMEOUT_RESULT( timeout ); 
+    wasp_schedule_task( task, ms );
+    TASK_RESULT( task ); 
 WASP_END_PRIM( timeout )
 
-WASP_BEGIN_PRIM( "cancel-timeout", cancel_timeout )
-    REQ_TIMEOUT_ARG( timeout )
+WASP_BEGIN_PRIM( "cancel-task", cancel_task )
+    REQ_TASK_ARG( task )
     NO_REST_ARGS( );
     
-    wasp_cancel_timeout( timeout );
+    wasp_cancel_task( task );
     
     NO_RESULT( );
-WASP_END_PRIM( cancel_timeout )
+WASP_END_PRIM( cancel_task )
+
+int wasp_pause_mt( wasp_task task ){
+    wasp_enable_process( wasp_process_fv( task->context ) );
+    return 0;
+}
+
+WASP_BEGIN_PRIM( "pause", pause )
+    wasp_value data;
+
+    OPT_INTEGER_ARG( ms );
+    NO_REST_ARGS( );
+
+    // The following statement ensures that pause will not be called again
+    // when we return.
+    WASP_CP = WASP_CP->cp;
+
+    // No result for when we return.
+    WASP_RX = wasp_vf_null( );
+
+    wasp_process p = wasp_active_process;
+    wasp_disable_process( p );
+        
+    if( ! has_ms ){
+        wasp_enable_process( p );
+    }else{ 
+        wasp_task task = wasp_make_task( wasp_pause_mt, wasp_vf_process( p ) );
+        wasp_schedule_task( task, ms );
+    }
+
+    // Restart the process loop since the active has been suspended.  Does
+    // not return.
+    wasp_proc_loop( );
+WASP_END_PRIM( pause )
 
 void wasp_init_time_subsystem( ){
-    WASP_I_TYPE( timeout );
+    WASP_I_TYPE( task );
     wasp_ss_timeout = wasp_symbol_fs( "timeout" );
 
     WASP_BIND_PRIM( timeout );
-    WASP_BIND_PRIM( cancel_timeout );
+    WASP_BIND_PRIM( cancel_task );
+    WASP_BIND_PRIM( pause );
 }
 
